--- a/templates/lightblue-security-domain.conf.erb
+++ b/templates/lightblue-security-domain.conf.erb
@@ -14,10 +14,10 @@
                   "verifier" => "org.jboss.security.auth.certs.AnyCertVerifier",
                   "rolesProperties" => expression "file://${jboss.server.config.dir}/roles.properties",
                   "authRoleName" => "authenticated",
-                  "ldapAdServer" => "<%= option_ldapAdServer %>",
-                  "ldapSearchBase" => "<%= option_ldapSearchBase %>",
-                  "ldapUsername" => "<%= option_ldapUsername %>",
-                  "ldapPassword" => "<%= option_ldapPassword %>"
+                  "ldapAdServer" => "<%= ldap_ad_server %>",
+                  "ldapSearchBase" => "<%= ldap_search_base %>",
+                  "ldapUsername" => "<%= ldap_username %>",
+                  "ldapPassword" => "<%= ldap_password %>"
                 }
               }
             }
@@ -27,12 +27,12 @@
           "classic" => {
              "client-auth" => true,
              "keystore" => {
-                        "password" => "<%= option_keystorePassword %>",
-                        "url" => "<%= option_keystoreUrl %>"
+                        "password" => "<%= keystore_password %>",
+                        "url" => "<%= keystore_url %>"
                     },
              "truststore" => {
-                        "password" => "<%= option_truststorePassword %>",
-                        "url" => "<%= option_truststoreUrl %>"
+                        "password" => "<%= truststore_password %>",
+                        "url" => "<%= truststore_url %>"
                     }
             }
          }
