--- a/templates/thread-pool.conf.erb
+++ b/templates/thread-pool.conf.erb
@@ -5,26 +5,26 @@
           <% if defined? core_thread_count %>
               "core-threads" => <%= core_thread_count %>,
               "allow-core-timeout" => false,
-          <% end %>
-          <% if handoff_executor %>
+          <% end -%>
+          <% if defined? handoff_executor %>
               "handoff-executor" => <%= handoff_executor %>,
-          <% end %>
-          <% if defined? keepalive_time and keepalive_time != '' %>
+          <% end -%>
+          <% if defined? keepalive_time  %>
               "keepalive-time" => <%= keepalive_time %>,
-          <% end %>
+          <% end -%>
               "max-threads" => <%= max_thread_count %> ,
           <% if defined? queue_length %>
               "queue-length" => <%= queue_length %>,
-          <% end %>
+          <% end -%>
 		  <% if defined? thread_factory %>
               "thread-factory" => "<%= thread_factory %>",
-		  <% end %>
+		  <% end -%>
           <% if defined? keepalive_time %>
               "keepalive-time" => {
                   "time" => "<%= keepalive_time %>",
                   "unit" => "SECONDS"
               },
-          <% end %>
+          <% end -%>
         }
       }
   }
