--- a/templates/web-connector.conf.erb
+++ b/templates/web-connector.conf.erb
@@ -1,7 +1,7 @@
 {
   "web" => {
     "connector" => {
-       "<%=name%>" => {
+       "<%=connector_name%>" => {
 
 <% if defined? ssl %>
 	"configuration" => { "<%=ssl%>" => { 
