--- a/templates/thread-pool.conf.erb
+++ b/templates/thread-pool.conf.erb
@@ -13,8 +13,17 @@
               "keepalive-time" => <%= keepalive_time %>,
           <% end -%>
               "max-threads" => <%= max_thread_count %> ,
-          <% if defined? $queue_length %>
-              "queue-length" => <%= $queue_length %>,
+          <% if $queue_length %>
+              "$queue-length" => <%= queue_length %>,
+          <% end -%>
+          <% if @queue_length %>
+              "@queue-length" => <%= queue_length %>,
+          <% end -%>
+          <% if defined? @queue_length %>
+              "defined @queue-length" => <%= queue_length %>,
+          <% end -%>
+          <% if defined? queue_length %>
+              "defined queue-length" => <%= queue_length %>,
           <% end -%>
 		  <% if @thread_factory %>
               "thread-factory" => "<%= thread_factory %>",
