Giving up, going back to empty string to denote not set

--- a/templates/thread-pool.conf.erb
+++ b/templates/thread-pool.conf.erb
@@ -2,48 +2,24 @@
   {
     "<%= pool_type %>" => 
 	  { "<%= pool_name %>" => {
-          <% if @core_thread_count %>
+          <% if @core_thread_count && @core_thread_count != ''%>
               "core-threads" => <%= core_thread_count %>,
               "allow-core-timeout" => false,
           <% end -%>
-          <% if $handoff_executor %>
-              "$handoff-executor" => <%= handoff_executor %>,
-          <% end -%>
-          <% if @handoff_executor && @handoff_executor != undef %>
+          <% if @handoff_executor && @handoff_executor != '' %>
               "@handoff-executor" => <%= handoff_executor %>,
           <% end -%>
-          <% if defined? @handoff_executor %>
-              "defined @handoff-executor" => <%= handoff_executor %>,
-          <% end -%>
-          <% if defined? $handoff_executor %>
-              "defined $handoff-executor" => <%= handoff_executor %>,
-          <% end -%>
-          <% if defined? handoff_executor %>
-              "defined handoff-executor" => <%= handoff_executor %>,
-          <% end -%>
-          <% if @keepalive_time  %>
+          <% if @keepalive_time && @keepalive_time != '' %>
               "keepalive-time" => <%= keepalive_time %>,
           <% end -%>
               "max-threads" => <%= max_thread_count %> ,
-          <% if $queue_length %>
-              "$queue-length" => <%= queue_length %>,
-          <% end -%>
-          <% if @queue_length && @queue_length != undef %>
+          <% if @queue_length && @queue_length != '' %>
               "@queue-length" => <%= queue_length %>,
           <% end -%>
-          <% if defined? @queue_length %>
-              "defined @queue-length" => <%= queue_length %>,
-          <% end -%>
-          <% if defined? $queue_length %>
-              "defined $queue-length" => <%= queue_length %>,
-          <% end -%>
-          <% if defined? queue_length %>
-              "defined queue-length" => <%= queue_length %>,
-          <% end -%>
-		  <% if @thread_factory %>
+		  <% if @thread_factory && @thread_factory != '' %>
               "thread-factory" => "<%= thread_factory %>",
 		  <% end -%>
-          <% if @keepalive_time %>
+          <% if @keepalive_time && @keepalive_time != '' %>
               "keepalive-time" => {
                   "time" => "<%= keepalive_time %>",
                   "unit" => "SECONDS"
