Added some docs about hookConfigurationParsers property in lightblue-metadata.json template

--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -1,6 +1,7 @@
 {
     "documentation": [
-        "type - the class implementing MetadataConfiguration interface",
+        "type - REQUIRED - the class implementing MetadataConfiguration interface",
+        "hookConfigurationParsers - OPTIONAL - array of classes implementing HookConfigurationParser interface",
         "The remainder of the file is parsed by the implementation class"
     ],
     "type" : "com.redhat.lightblue.mongo.config.MongoMetadataConfiguration",
