--- a/templates/logging.conf.erb
+++ b/templates/logging.conf.erb
@@ -8,7 +8,7 @@
                "relative-to" => "jboss.server.log.dir",
                "path" => "server.log",
             },
-           "formatter" => "<%= logging_format %>"
+           "formatter" => "<%= format %>"
        }
     },
     "periodic-rotating-file-handler" => {
@@ -22,7 +22,7 @@
    },
     "logger" => {
        "com.redhat" => {
-         "level" => "<%= com_redhat_log_level %>",
+         "level" => "<%= lightblue_log_level %>",
        }
    },
     "root-logger" => {
