--- a/templates/logging.conf.erb
+++ b/templates/logging.conf.erb
@@ -8,7 +8,7 @@
                "relative-to" => "jboss.server.log.dir",
                "path" => "server.log",
             },
-           "formatter" => "<%= format %>"
+           "formatter" => "<%= logging_format %>"
        }
     },
     "periodic-rotating-file-handler" => {
