Update parameter names to match class

--- a/templates/properties/appconfig.properties.erb
+++ b/templates/properties/appconfig.properties.erb
@@ -1,5 +1,5 @@
-serviceURI=<%=metadata_mgmt_service_URI%>
-caFilePath=<%=metadata_mgmt_ca_file_path%>
-certFilePath=<%=metadata_mgmt_cert_file_path%>
-certPassword=<%=metadata_mgmt_cert_password%>
-certAlias=<%=metadata_mgmt_cert_alias%>
+serviceURI=<%=mgmt_app_service_URI%>
+caFilePath=<%=mgmt_app_ca_file_path%>
+certFilePath=<%=mgmt_app_cert_file_path%>
+certPassword=<%=mgmt_app_cert_password%>
+certAlias=<%=mgmt_app_cert_alias%>
