Fix formatting properties

--- a/templates/lightblue-system-properties-saml.conf.erb
+++ b/templates/lightblue-system-properties-saml.conf.erb
@@ -1,12 +1,12 @@
 { "system-property" => {
-    IdentityURL" => "https://saml.dev.redhat.com/idp/",
-    ServiceURL" => "https://metadatadevelb.a1.vary.redhat.com/app/metadata/",
-    KeyStoreURL" => "dev-internal-idp.jks",
-    KeyStorePass" => "gxqT8mobh2getaW",
-    SigningKeyPass" => "nothingtoseehere",
-    SigningKeyAlias" => "bogusvalue",
-    ValidatingAliasKey" => "saml.dev.redhat.com",
-    ValidatingAliasValue" => "RedHatSAMLIDP",
-    TestThisWorks" => "ItDoes!"
+    "IdentityURL" => "https://saml.dev.redhat.com/idp/",
+    "ServiceURL" => "https://metadatadevelb.a1.vary.redhat.com/app/metadata/",
+    "KeyStoreURL" => "dev-internal-idp.jks",
+    "KeyStorePass" => "gxqT8mobh2getaW",
+    "SigningKeyPass" => "nothingtoseehere",
+    "SigningKeyAlias" => "bogusvalue",
+    "ValidatingAliasKey" => "saml.dev.redhat.com",
+    "ValidatingAliasValue" => "RedHatSAMLIDP",
+    "TestThisWorks" => "ItDoes!"
   }
 }
