Fix parameter names

--- a/templates/lightblue-system-properties-saml.conf.erb
+++ b/templates/lightblue-system-properties-saml.conf.erb
@@ -1,8 +1,8 @@
 { "system-property" => {
     "IdentityURL" => "<%= identity_url %>",
     "ServiceURL" => "<%= service_url %>",
-    "KeyStoreURL" => '<%= keystore_url %>",
-    "KeyStorePass" => "<%= keystore_pass %>",
+    "KeyStoreURL" => '<%= key_store_url %>",
+    "KeyStorePass" => "<%= key_store_pass %>",
     "SigningKeyPass" => "<%= signing_key_pass %>",
     "SigningKeyAlias" => "<%= signing_key_alias %>",
     "ValidatingAliasKey" => "<%= validating_key_alias %>",
