Change single quote to double quote on parameter

--- a/templates/lightblue-system-properties-saml.conf.erb
+++ b/templates/lightblue-system-properties-saml.conf.erb
@@ -1,7 +1,7 @@
 { "system-property" => {
     "IdentityURL" => "<%= identity_url %>",
     "ServiceURL" => "<%= service_url %>",
-    "KeyStoreURL" => '<%= key_store_url %>",
+    "KeyStoreURL" => "<%= key_store_url %>",
     "KeyStorePass" => "<%= key_store_pass %>",
     "SigningKeyPass" => "<%= signing_key_pass %>",
     "SigningKeyAlias" => "<%= signing_key_alias %>",
