Add useCertAuth property to config file

--- a/templates/properties/appconfig.properties.erb
+++ b/templates/properties/appconfig.properties.erb
@@ -1,4 +1,5 @@
 serviceURI=<%=mgmt_app_service_URI%>
+useCertAuth=<%=mgmt_app_use_cert_auth%>
 caFilePath=<%=mgmt_app_ca_file_path%>
 certFilePath=<%=mgmt_app_cert_file_path%>
 certPassword=<%=mgmt_app_cert_password%>
