Fix accesslogging to use the correct class name

--- a/templates/accesslogging.conf.erb
+++ b/templates/accesslogging.conf.erb
@@ -11,25 +11,17 @@
            "formatter" => "<%= logging_format %>"
        }
     },
-    "periodic-rotating-file-handler" => {
-        "FILE" => "deleted"
-    },
     "async-handler" => {
-       "rh_async" => {
-         "subhandlers" => ["rh_file_handler"],
+       "rh_access_async" => {
+         "subhandlers" => ["rh_access_log_file_handler"],
          "queue-length" => 1000
        }
    },
     "logger" => {
-       "com.redhat.lightblue.rest.auth" => {
+       "com.redhat.lightblue.rest.auth.jboss.access" => {
          "level" => "INFO",
+         "handlers" => [ "rh_access_log_file_handler" ]
        }
    },
-    "root-logger" => {
-       "ROOT" => {
-         "handlers" => [ "rh_file_handler" ],
-         "level" => "<%= root_log_level %>"
-       }
-    }
   }
 }
