--- a/templates/accesslogging.conf.erb
+++ b/templates/accesslogging.conf.erb
@@ -18,7 +18,7 @@
        }
    },
     "logger" => {
-       "com.redhat.lightblue.rest.auth.jboss.access" => {
+       "com.redhat.lightblue.rest.auth.jboss.CertLdapLoginModule.access" => {
          "level" => "INFO",
          "handlers" => [ "rh_access_log_file_handler" ]
        }
