--- a/templates/accesslogging.conf.erb
+++ b/templates/accesslogging.conf.erb
@@ -20,6 +20,7 @@
     "logger" => {
        "com.redhat.lightblue.rest.auth.jboss.CertLdapLoginModule.access" => {
          "level" => "INFO",
+         "use-parent-handlers" => false,
          "handlers" => [ "rh_access_log_file_handler" ]
        }
    },
