Change formatter to access_logging_format Revert earlier changes that attempted to suppress higher level logging

--- a/templates/accesslogging.conf.erb
+++ b/templates/accesslogging.conf.erb
@@ -8,7 +8,7 @@
                "relative-to" => "jboss.server.log.dir",
                "path" => "access.log",
             },
-           "formatter" => "<%= logging_format %>"
+           "formatter" => "<%= access_logging_format %>"
        }
     },
     "async-handler" => {
@@ -20,19 +20,6 @@
     "logger" => {
        "com.redhat.lightblue.rest.auth.jboss.CertLdapLoginModule.access" => {
          "level" => "INFO",
-         "use-parent-handlers" => false,
-         "handlers" => [ "rh_access_log_file_handler" ]
-       }
-   },
-   "logger" => {
-       "com.redhat.lightblue.rest.auth.jboss" => {
-         "level" => "WARN",
-         "use-parent-handlers" => false,
-         "handlers" => [ "rh_access_log_file_handler" ]
-       }
-   },"logger" => {
-       "com.redhat.lightblue.rest.auth" => {
-         "level" => "WARN",
          "use-parent-handlers" => false,
          "handlers" => [ "rh_access_log_file_handler" ]
        }
