Remove variable on rdbms name

--- a/templates/lightblue-rdbms-datasource.conf.erb
+++ b/templates/lightblue-rdbms-datasource.conf.erb
@@ -1,6 +1,6 @@
 {
   "datasource" => {
-    <%= $data_source_name %> => { 
+    rdbms => { 
       "jndi-name => "<%= jndi_name %>",
       "connection-url" => "<%= connection_url %>",
       "driver-name" => "<%= driver_name %>",
