--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -97,4 +97,35 @@
      ]
 <% end -%>
    }
+
+<% if rdbms_servers_cfg.kind_of?(Array) -%>   
+   ,
+    "rdbms" : {
+    "type" : "com.redhat.lightblue.config.rdbms.RDBMSDataSourceConfiguration",
+    "metadataDataStoreParser" : "com.redhat.lightblue.metadata.rdbms.impl.RDBMSDataStoreParser",
+    <% if database -%>
+    "database" : <%=database%>,
+    <% end -%>
+    <% if rdbms_servers_cfg.connections.kind_of?(Array) -%>
+    "connections" : [
+    <%
+    i = rdbms_servers_cfg.connections.length
+    rdbms_servers_cfg.connections.each do |connection|
+    -%>
+    {
+       "datasourceName" : "<%=connection['datasourceName']%>",
+       "JNDI" : "<%=connection['JNDI']%>"
+    }
+    <% if i > 1 then -%>
+    ,
+    <%
+      end 
+      i = i - 1
+    -%>
+     <% end -%>
+     ]
+   <% end -%>
+   }
+<% end -%>   
+   
 }
