--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -4,5 +4,22 @@
         "backend" : "mongo",
         "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory"
       }
+      
+      <% if additional_backend_controllers != '' && additional_backend_controllers.kind_of?(Array) -%>   
+        i = additional_backend_controllers.length
+        additional_backend_controllers.each do |controller|
+        ,   
+        {
+       "backend" : "<%=controller['backend']%>",
+       "controllerFactory" : "<%=controller['controllerFactory']%>"
+        }
+        
+        <% if i > 1 then -%>
+        ,
+        <%
+          end 
+          i = i - 1
+        -%>
+      <% end -%> 
    ]
 }
