--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -21,6 +21,26 @@
         <% end -%>
      ],
 <% end -%>
+<% if backend_parsers != '' && backend_parsers.kind_of?(Array) -%>
+    "backend_parsers": [
+        <%
+        i = backend_parsers.length
+        backend_parsers.each do |parser|
+        
+        {
+       "name" : "<%=parser['name']%>",
+       "clazz" : "<%=parser['clazz']%>"
+        }
+        
+        <% if i > 1 then -%>
+        ,
+        <%
+          end 
+          i = i - 1
+        -%>
+        <% end -%>
+     ],
+<% end -%>    
     "dataSource" : "metadata",
     "collection": "metadata"
 }
