--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -6,20 +6,35 @@
     ],
     "type" : "com.redhat.lightblue.mongo.config.MongoMetadataConfiguration",
 <% if hook_configuration_parsers != '' && hook_configuration_parsers.kind_of?(Array) -%>
-     "hookConfigurationParsers" : [
-        <%
-        i = hook_configuration_parsers.length
-        hook_configuration_parsers.each do |parser|
-        -%>
-           "<%=parser%>"
-        <% if i > 1 then -%>
+    "hookConfigurationParsers" : [
+    <%
+      i = hook_configuration_parsers.length
+      hook_configuration_parsers.each do |parser|
+    -%>
+        "<%=parser%>"
+    <% if i > 1 then -%>
         ,
-        <%
-          end 
-          i = i - 1
-        -%>
-        <% end -%>
-     ],
+    <%
+      end 
+      i = i - 1
+    -%>
+    <% end -%>
+    ],
+<% end -%>
+<% if metadata_roles != '' && metadata_roles.kind_of?(Hash) -%>
+    "roleMap":{
+        "metadata.find.dependencies": ["<%= metadata_roles["metadata.find.dependencies"] %>"],
+        "metadata.find.roles": ["<%= metadata_roles["metadata.find.roles"] %>"],
+        "metadata.find.entityNames": ["<%= metadata_roles["metadata.find.entityNames"] %>"],
+        "metadata.find.entityVersions": ["<%= metadata_roles["metadata.find.entityVersions"] %>"],
+        "metadata.find.entityMetadata": ["<%= metadata_roles["metadata.find.entityMetadata"] %>"],
+        "metadata.insert": ["<%= metadata_roles["metadata.insert"] %>"],
+        "metadata.insert.schema": ["<%= metadata_roles["metadata.insert.schema"] %>"],
+        "metadata.update.entityInfo": ["<%= metadata_roles["metadata.update.entityInfo"] %>"],
+        "metadata.update.schemaStatus": ["<%= metadata_roles["metadata.update.schemaStatus"] %>"],
+        "metadata.update.defaultVersion": ["<%= metadata_roles["metadata.update.defaultVersion"] %>"],
+        "metadata.delete.entity": ["<%= metadata_roles["metadata.delete.entity"] %>"]
+    },
 <% end -%>
 <% if backend_parsers != '' && backend_parsers.kind_of?(Array) -%>
     "backend_parsers": [
