--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -103,7 +103,7 @@
     "rdbms" : {
     "type" : "com.redhat.lightblue.config.rdbms.RDBMSDataSourceConfiguration",
     "metadataDataStoreParser" : "com.redhat.lightblue.metadata.rdbms.impl.RDBMSDataStoreParser",
-    "database" : "<%=rdbms_servers_cfg.database%>",
+    "database" : "rdbms",
     <% if rdbms_servers_cfg.connections.kind_of?(Array) -%>
     "connections" : [
     <%
