--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -104,7 +104,7 @@
     "type" : "com.redhat.lightblue.config.rdbms.RDBMSDataSourceConfiguration",
     "metadataDataStoreParser" : "com.redhat.lightblue.metadata.rdbms.impl.RDBMSDataStoreParser",
     "database" : "rdbms",
-    <% if rdbms_servers_cfg.connections.kind_of?(Array) -%>
+    <% if rdbms_servers_cfg['connections'].kind_of?(Array) -%>
     "connections" : [
     <%
     i = rdbms_servers_cfg.connections.length
