--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -104,11 +104,10 @@
     "type" : "com.redhat.lightblue.config.rdbms.RDBMSDataSourceConfiguration",
     "metadataDataStoreParser" : "com.redhat.lightblue.metadata.rdbms.impl.RDBMSDataStoreParser",
     "database" : "rdbms",
-    <% if rdbms_servers_cfg['connections'].kind_of?(Array) -%>
     "connections" : [
     <%
-    i = rdbms_servers_cfg.connections.length
-    rdbms_servers_cfg.connections.each do |connection|
+    i = rdbms_servers_cfg.length
+    rdbms_servers_cfg.each do |connection|
     -%>
     {
        "datasourceName" : "<%=connection['datasourceName']%>",
