--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -6,7 +6,7 @@
       }
       
       <% if additional_backend_controllers != '' && additional_backend_controllers.kind_of?(Array) -%>   
-        additional_backend_controllers.each do |controller|
+        <% additional_backend_controllers.each do |controller| -%>
         ,   
         {
        "backend" : "<%=controller['backend']%>",
