Fix variable name

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -12,6 +12,7 @@
        "backend" : "<%=controller['backend']%>",
        "controllerFactory" : "<%=controller['controllerFactory']%>"
         }
+        <% end -%>
       <% end -%> 
    ]
 }
