Fix bad JCliff syntax

--- a/templates/lightblue-rdbms-datasource.conf.erb
+++ b/templates/lightblue-rdbms-datasource.conf.erb
@@ -1,7 +1,8 @@
 {
   "datasource" => {
     "<%= data_source_name %>" => { 
-      "jndi-name => "<%= jndi_name %>",
+      "pool-name" => "<%= pool_name %>",
+      "jndi-name" => "<%= jndi_name %>",
       "connection-url" => "<%= connection_url %>",
       "driver-name" => "<%= driver_name %>",
       "user-name" => "<%= user_name %>",
