--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -21,10 +21,7 @@
     <% end -%>
     ],
 <% end -%>
-<% if metadata_roles != '' && metadata_roles.kind_of?(Hash) -%>
-    "roleMap": "foo",
-<% end -%>
-<% if false -%>
+<% if false &&  metadata_roles != '' && metadata_roles.kind_of?(Hash) -%>
     "roleMap": {
         "metadata.find.dependencies": ["<%= metadata_roles["metadata.find.dependencies"] %>"],
         "metadata.find.roles": ["<%= metadata_roles["metadata.find.roles"] %>"],
