add ability to configure jvm options

--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -42,6 +42,13 @@ do_exec()
   jsvcCommand << "-outfile $LOG_OUT"
   jsvcCommand << "-errfile $LOG_ERR"
   jsvcCommand << "-pidfile $PID"
+  
+  if @jvmOptions
+    @jvmOptions.each do |key, value|
+      jsvcCommand << "-X#{key}=#{value}"
+    end
+  end
+  
   jsvcCommand << "$MAIN_CLASS"
 
   if @arguments
