there is no space or = between jvm flag and value

--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -45,7 +45,7 @@ do_exec()
   
   if @jvmOptions
     @jvmOptions.each do |key, value|
-      jsvcCommand << "-X#{key}=#{value}"
+      jsvcCommand << "-X#{key}#{value}"
     end
   end
   
