open up flexibility by empowering the user to control what the jvm argument looks like

--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -44,8 +44,8 @@ do_exec()
   jsvcCommand << "-pidfile $PID"
   
   if @jvmOptions
-    @jvmOptions.each do |key, value|
-      jsvcCommand << "-X#{key}#{value}"
+    @jvmOptions.each do |param|
+      jsvcCommand << "-#{param}"
     end
   end
   
