--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -22,7 +22,7 @@
     <% end -%>
     ],
 <% end -%>
-<% if metadata_roles != '' -%>
+<% if metadata_roles != '' && metadata_roles.kind_of?(Hash) -%>
     "roleMap": {
     <% 
       k = metadata_roles.keys.length
